--- a/Patri.xcodeproj/xcshareddata/xcschemes/Patri.xcscheme
+++ b/Patri.xcodeproj/xcshareddata/xcschemes/Patri.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BD01A627267A8712005A9F96"
+               BuildableName = "PatriTests.xctest"
+               BlueprintName = "PatriTests"
+               ReferencedContainer = "container:Patri.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
