--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,26 @@
-# For a detailed guide to building and testing on iOS, read the docs:
-# https://circleci.com/docs/2.0/testing-ios/
-
 version: 2.1
 jobs:
   build-and-test:
     macos:
-      xcode: 12.0.1 # Specify the Xcode version to use
-      environment: 
-      FL_OUTPUT_DIR: test_output
+      xcode: 12.0.1
+    environment:
+      FL_OUTPUT_DIR: output
 
     steps:
       - checkout
-      #- run: pod install # Install CocoaPods dependencies
-      - run: 
-        name: build and run tests
-        command: fastlane scan # Run tests using Fastlane
-        environment: 
-         SCAN_DEVICE: iPhone 8
-         SCAN_SCHEME: Patri
+      - run:
+          name: Build and run tests
+          command: fastlane scan
+          environment:
+            SCAN_DEVICE: iPhone 8
+            SCAN_SCHEME: Patri
 
-
-      # Collect XML test results data to show in the UI, and save the same XML
-      # files under test-results folder in the Artifacts tab
       - store_test_results:
-          path: test_output/scan
+          path: output/scan
       - store_artifacts:
-          path: test_output
-          
-   workflow: 
-    version: 2
-    build-and-test: 
-      jobs:
-          - build-and-test
+          path: output
+
+workflows:
+  build-test-lint:
+    jobs:
+      - build-and-test
